vpc-peering/both/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: VPC-Peering
Parameters:
  # ------------------------------------------------------------#
  #  Requester
  # ------------------------------------------------------------#
  RequesterProjectPrefix:
    Type: String
    Default: "requester-"

  RequesterVpcCidr:
    Type: String
    Default: "10.0.0.0/16"

  RequesterPublicSubnetACidr:
    Type: String
    Default: "10.0.0.0/24"
  RequesterPublicSubnetBCidr:
    Type: String
    Default: "10.0.32.0/24"
  RequesterPublicSubnetCCidr:
    Type: String
    Default: "10.0.64.0/24"
  RequesterPublicSubnetDCidr:
    Type: String
    Default: "10.0.96.0/24"

  RequesterPrivateSubnetACidr:
    Type: String
    Default: "10.0.128.0/24"
  RequesterPrivateSubnetBCidr:
    Type: String
    Default: "10.0.160.0/24"
  RequesterPrivateSubnetCCidr:
    Type: String
    Default: "10.0.192.0/24"
  RequesterPrivateSubnetDCidr:
    Type: String
    Default: "10.0.224.0/24"

  # ------------------------------------------------------------#
  #  Accepter
  # ------------------------------------------------------------#
  AccepterProjectPrefix:
    Type: String
    Default: "accepter-"

  EKSClusterNameInAccepter:
    Type: String
    Default: "Cluster"

  AccepterVpcCidr:
    Type: String
    Default: "192.168.0.0/16"

  AccepterPublicSubnetACidr:
    Type: String
    Default: "192.168.0.0/24"
  AccepterPublicSubnetBCidr:
    Type: String
    Default: "192.168.32.0/24"
  AccepterPublicSubnetCCidr:
    Type: String
    Default: "192.168.64.0/24"
  AccepterPublicSubnetDCidr:
    Type: String
    Default: "192.168.96.0/24"

  AccepterPrivateSubnetACidr:
    Type: String
    Default: "192.168.128.0/24"
  AccepterPrivateSubnetBCidr:
    Type: String
    Default: "192.168.160.0/24"
  AccepterPrivateSubnetCCidr:
    Type: String
    Default: "192.168.192.0/24"
  AccepterPrivateSubnetDCidr:
    Type: String
    Default: "192.168.224.0/24"

Resources:
  # ------------------------------------------------------------#
  #
  #
  # VPC Requester
  #
  #
  # ------------------------------------------------------------#
  # ------------------------------------------------------------#
  #  VPC
  # ------------------------------------------------------------#
  RequesterVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref RequesterVpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}vpc"
  RequesterInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}igw"
  RequesterInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref RequesterInternetGateway
      VpcId: !Ref RequesterVPC

  # ------------------------------------------------------------#
  #  Subnet
  # ------------------------------------------------------------#
  RequesterPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref RequesterPublicSubnetACidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-subnet-a"
  RequesterPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}b
      CidrBlock: !Ref RequesterPublicSubnetBCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-subnet-b"
  RequesterPublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref RequesterPublicSubnetCCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-subnet-c"
  RequesterPublicSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: !Ref RequesterPublicSubnetDCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-subnet-d"

  RequesterPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref RequesterPrivateSubnetACidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-subnet-a"
  RequesterPrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}b
      CidrBlock: !Ref RequesterPrivateSubnetBCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-subnet-b"
  RequesterPrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref RequesterPrivateSubnetCCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-subnet-c"
  RequesterPrivateSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: !Ref RequesterPrivateSubnetDCidr
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-subnet-d"

  # ------------------------------------------------------------#
  #  RouteTable
  # ------------------------------------------------------------#
  RequesterPublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-route-a"
  RequesterPublicRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-route-b"
  RequesterPublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-route-c"
  RequesterPublicRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}public-route-d"

  RequesterPrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-route-a"
  RequesterPrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-route-b"
  RequesterPrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-route-c"
  RequesterPrivateRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RequesterVPC
      Tags:
        - Key: Name
          Value: !Sub "${RequesterProjectPrefix}private-route-d"

  # ------------------------------------------------------------#
  # Routing
  # ------------------------------------------------------------#
  RequesterPublicRouteA:
    Type: AWS::EC2::Route
    DependsOn:
      - RequesterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RequesterPublicRouteTableA
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RequesterInternetGateway
  RequesterPublicRouteB:
    Type: AWS::EC2::Route
    DependsOn:
      - RequesterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RequesterPublicRouteTableB
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RequesterInternetGateway
  RequesterPublicRouteC:
    Type: AWS::EC2::Route
    DependsOn:
      - RequesterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RequesterPublicRouteTableC
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RequesterInternetGateway
  RequesterPublicRouteD:
    Type: AWS::EC2::Route
    DependsOn:
      - RequesterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RequesterPublicRouteTableD
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RequesterInternetGateway

  RequesterPrivateRouteA:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref RequesterPrivateRouteTableA
      DestinationCidrBlock: !Ref AccepterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  RequesterPrivateRouteB:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref RequesterPrivateRouteTableB
      DestinationCidrBlock: !Ref AccepterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  RequesterPrivateRouteC:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref RequesterPrivateRouteTableC
      DestinationCidrBlock: !Ref AccepterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  RequesterPrivateRouteD:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref RequesterPrivateRouteTableD
      DestinationCidrBlock: !Ref AccepterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection

  # ------------------------------------------------------------#
  # RouteTable Associate
  # ------------------------------------------------------------#
  RequesterPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPublicSubnetA
      RouteTableId: !Ref RequesterPublicRouteTableA
  RequesterPublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPublicSubnetB
      RouteTableId: !Ref RequesterPublicRouteTableB
  RequesterPublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPublicSubnetC
      RouteTableId: !Ref RequesterPublicRouteTableC
  RequesterPublicSubnetDRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPublicSubnetD
      RouteTableId: !Ref RequesterPublicRouteTableD

  RequesterPrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPrivateSubnetA
      RouteTableId: !Ref RequesterPrivateRouteTableA
  RequesterPrivateSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPrivateSubnetB
      RouteTableId: !Ref RequesterPrivateRouteTableB
  RequesterPrivateSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPrivateSubnetC
      RouteTableId: !Ref RequesterPrivateRouteTableC
  RequesterPrivateSubnetDRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RequesterPrivateSubnetD
      RouteTableId: !Ref RequesterPrivateRouteTableD

  # ------------------------------------------------------------#
  #
  #
  # VPC Accepter
  #
  #
  # ------------------------------------------------------------#
  # ------------------------------------------------------------#
  #  VPC
  # ------------------------------------------------------------#
  AccepterVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref AccepterVpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}vpc"
  AccepterInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}igw"
  AccepterInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref AccepterInternetGateway
      VpcId: !Ref AccepterVPC

  # ------------------------------------------------------------#
  #  Subnet
  # ------------------------------------------------------------#
  AccepterPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref AccepterPublicSubnetACidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-subnet-a"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
  AccepterPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}b
      CidrBlock: !Ref AccepterPublicSubnetBCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-subnet-b"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
  AccepterPublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref AccepterPublicSubnetCCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-subnet-c"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
  AccepterPublicSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: !Ref AccepterPublicSubnetDCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-subnet-d"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"

  AccepterPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref AccepterPrivateSubnetACidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-subnet-a"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
  AccepterPrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}b
      CidrBlock: !Ref AccepterPrivateSubnetBCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-subnet-b"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
  AccepterPrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref AccepterPrivateSubnetCCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-subnet-c"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
  AccepterPrivateSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: !Ref AccepterPrivateSubnetDCidr
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-subnet-d"
        - Key: !Sub kubernetes.io/cluster/${EKSClusterNameInAccepter}
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"

  # ------------------------------------------------------------#
  #  RouteTable
  # ------------------------------------------------------------#
  AccepterPublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-route-a"
  AccepterPublicRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-route-b"
  AccepterPublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-route-c"
  AccepterPublicRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}public-route-d"

  AccepterPrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-route-a"
  AccepterPrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-route-b"
  AccepterPrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-route-c"
  AccepterPrivateRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: !Sub "${AccepterProjectPrefix}private-route-d"

  # ------------------------------------------------------------#
  # Routing
  # ------------------------------------------------------------#
  AccepterPublicRouteA:
    Type: AWS::EC2::Route
    DependsOn:
      - AccepterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref AccepterPublicRouteTableA
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref AccepterInternetGateway
  AccepterPublicRouteB:
    Type: AWS::EC2::Route
    DependsOn:
      - AccepterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref AccepterPublicRouteTableB
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref AccepterInternetGateway
  AccepterPublicRouteC:
    Type: AWS::EC2::Route
    DependsOn:
      - AccepterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref AccepterPublicRouteTableC
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref AccepterInternetGateway
  AccepterPublicRouteD:
    Type: AWS::EC2::Route
    DependsOn:
      - AccepterInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref AccepterPublicRouteTableD
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref AccepterInternetGateway

  AccepterPrivateRouteA:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref AccepterPrivateRouteTableA
      DestinationCidrBlock: !Ref RequesterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  AccepterPrivateRouteB:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref AccepterPrivateRouteTableB
      DestinationCidrBlock: !Ref RequesterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  AccepterPrivateRouteC:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref AccepterPrivateRouteTableC
      DestinationCidrBlock: !Ref RequesterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
  AccepterPrivateRouteD:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcPeeringConnection
    Properties:
      RouteTableId: !Ref AccepterPrivateRouteTableD
      DestinationCidrBlock: !Ref RequesterVpcCidr
      VpcPeeringConnectionId: !Ref VpcPeeringConnection

  # ------------------------------------------------------------#
  # RouteTable Associate
  # ------------------------------------------------------------#
  AccepterPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPublicSubnetA
      RouteTableId: !Ref AccepterPublicRouteTableA
  AccepterPublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPublicSubnetB
      RouteTableId: !Ref AccepterPublicRouteTableB
  AccepterPublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPublicSubnetC
      RouteTableId: !Ref AccepterPublicRouteTableC
  AccepterPublicSubnetDRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPublicSubnetD
      RouteTableId: !Ref AccepterPublicRouteTableD

  AccepterPrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPrivateSubnetA
      RouteTableId: !Ref AccepterPrivateRouteTableA
  AccepterPrivateSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPrivateSubnetB
      RouteTableId: !Ref AccepterPrivateRouteTableB
  AccepterPrivateSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPrivateSubnetC
      RouteTableId: !Ref AccepterPrivateRouteTableC
  AccepterPrivateSubnetDRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AccepterPrivateSubnetD
      RouteTableId: !Ref AccepterPrivateRouteTableD

  # ------------------------------------------------------------#
  #
  # VPC Peering
  #
  # ------------------------------------------------------------#
  VpcPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref RequesterVPC
      PeerVpcId: !Ref AccepterVPC
      Tags:
        - Key: Name
          Value: VpcPeeringConnection
